fixed chapter length on small and medium devices

--- a/assets/less/jomi/content.less
+++ b/assets/less/jomi/content.less
@@ -345,7 +345,7 @@ background: rgba(255,255,255,0.1);
 @media (min-width: 768px) {
    .single #chapters{
       margin-left: 0px;
-      width: initial;
+      width: 33.33333%;
    }
 
    .single .wrap, .page:not(.home) .wrap, .archive .wrap, .search .wrap{
